Thu May 18 21:34:03 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Quotes, escaped quotes and escaped spaces in config files work
	as one would expect. I think. Don't they?

Thu May 18 20:43:16 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* \n now gets you a newline in a feh-interpreted string.

Thu May 18 20:26:54 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Changed how -l and -L work. -L is now --customlist, which takes
	a string argument. The string is a feh-printf format specifier,
	just like those used for action definitions. (Eg %f for filename,
	%w for width etc). The format specifier is used to form the list
	output for each file. Example usage:
	feh -L "<img src=\"%f\" alt=\"feh\" width=\"%w\" height=\"%h\">" pr0n.png
	Stuck a new theme in the example.fehrc config, and found how lame
	my config parsing code is :-) Quotes and escaped quotes currently
	*do not* work right. I'm fixing it now :-)

Tue May 16 17:51:40 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Ignore duplicate MotionNotify events
	* Same for ConfigureNotify
	* Saved some wasted cycles

Mon May 15 22:49:07 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Hehe. Now I made a release I can break stuff again =P You can
	resize the window again now, and it works okay, except zooming
	isn't quite right when the window is bigger than the image right
	now. I have to redo *all* that zooming code over the next week
	or so 'cos it was shortsighted to start with :-(

Sun May 14 17:34:48 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* New "Image Info" submenu. It tells you stuff. About the
	image. Hence the name.

Sun May 14 16:03:53 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Reorganised and tidied the headers somewhat. Various cleanups.

Sat May 13 20:53:12 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Add -N, --no-menus option for people who Just Want The Pr0n [tm]

Sat May 13 20:35:08 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Now you can press 'r' to reload images too.
