@@ -47,6 +47,8 @@ init_list_mode(void)
                 file->info->width, file->info->height, file->info->pixels,
                 file->info->size, file->info->has_alpha ? 'X' : '-',
                 file->filename);
+      if(opt.action)
+         feh_action_run(file);
    }
    exit(0);
 }
