@@ -671,9 +671,11 @@ show_usage(void)
            "  -n, --reverse             Reverse the sort order. Use this to invert the order\n"
            "                            of the filelist. Eg to sort in reverse width order,\n"
            "                            use -nSwidth\n"
-           "  -A, --action ACTION       Specify a string as an action to perform when the\n"
-           "                            enter key is pressed in slideshow or multiwindow\n"
-           "                            modes. The action will be executed in a shell. Use\n"
+           "  -A, --action ACTION       Specify a string as an action to perform on the\n"
+           "                            image. In slideshow or multiwindow modes, the action\n"
+           "                            will be run when the enter key is pressed, in list\n"
+           "                            mode, the action will be run for each file.\n"
+           "                            The action will be executed by /bin/sh. Use\n"
            "                            format specifiers to refer to image info. See\n"
            "                            FORMAT SPECIFIERS for examples\n"
            "                            Eg. -X \"mv %%f ~/images/%%n\"\n"
